--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     </header>
 
     <section class="outputScreen d-flex">
-      <p class="previousDisplay">Ans</p>
-      <p class="newValue">0</p>
+      <p data-previousDisplay class="previousDisplay">Ans</p>
+      <p data-currentDisplay class="newValue">0</p>
     </section>
 
     <section class="buttons">
