--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Calculator app">
+  <meta name="keywords" content="Calculator app, Updated Calculator">
+  <meta name="author" content="Adewale Stephen">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <title>Frontend Mentor | Calculator app</title>
+  <title>Calculator app</title>
 </head>
 
 <body data-body class="d-flex">
@@ -72,8 +75,7 @@
   </main>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Adewale Stephen</a>.
+    Made with ❤️ by <a href="https://x.com/codewithstephen" target="_blank">Stephen</a>.
   </div>
   <script src="main.js"></script>
 </body>
