modified: update added

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <button data-operator="x">x</button>
 
       <button data-reset class="deleteAndReset span">reset</button>
-      <button data-eqauls class="equals span">=</button>
+      <button data-equals class="equals span">=</button>
     </section>
   </main>
 
